[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.82"

[dependencies.leetcode-cli]
git = "https://github.com/magicwenli/leetcode-cli"
branch = "master"
